Fix label and placeholder overlap

--- a/utils/vara-ui/src/components/textarea/textarea.module.scss
+++ b/utils/vara-ui/src/components/textarea/textarea.module.scss
@@ -36,7 +36,7 @@
   padding-left: 14px;
 
   &:not(:focus) {
-    &::-webkit-input-placeholder {
+    &::placeholder {
       color: transparent;
     }
   }
